# DML-project

./: .gitignore  README.md  pyproject.toml  test.ipynb
notebooks/: baseline.ipynb  baseline_infer.ipynb  battle_arena.ipynb  eval.ipynb  evaluation.ipynb  fine_tuned_infer.ipynb  genre_model.ipynb  genre_model_2.ipynb  infer.ipynb  init.ipynb
notebooks/params/: big_training_history.json
preprocessing/: data.txt  datapre.ipynb  loaders.ipynb  preprocessing.ipynb  tokenize.ipynb
src/: inf.py  load_data.py
