[project]
name = "dml-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=7.0.0",
    "jupyter>=1.1.1",
    "kaggle>=1.7.4.5",
    "matplotlib>=3.10.7",
    "numpy<2.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "torch==2.3.1",
    "transformers==4.43.3",
    "huggingface-hub==0.24.6",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.2",
]
